<resources>
    <string name="app_name">Cosmic Digital</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_youtube">Youtube</string>
    <string name="TextView2">Latest Technology</string>
    <string-array name="TextView3">/*content navigation drawer*/
        <item>The multi-dimensional portfolio of world-class </item>
        <item>entertainment solutions.</item>
    </string-array>
    <string-array name="TextView4">/*content navigation drawer*/
        <item>In today’s digital world, creating an immersive experience - utilising existing tables, </item>
        <item>floor surfaces and walls- is the need of the time. Cosmic intends to bring evolution in </item>
        <item>the entertainment experience by aspiring to make every viewer actively participate in</item>
        <item>the thrills that come alive on the screen. Adopting the innovative technology of touch,</item>
        <item>multi touch and gesture which has come of age, we create the most engaging and</item>
        <item>memorable experience. To deliver immersive experiences, Cosmic has partnered</item>
        <item>with global distributors to provide cinema-goers an out-of-body experience that they</item>
        <item>aspire for. Explore the multi-dimensional portfolio of world-class entertainment</item>
        <item>solutions that include a combination of 7D cinema, Interactive floors, Pyramid Holographics,</item>
        <item>Karaoke Booths and 360 degree videos that turn virtual into real.</item>
    </string-array>
    <string name="TextView5">The only Constant at Cosmic is Change</string>
    <string name="TextView6">Limitless Possibilities</string>
    <string-array name="TextView7">/*limitless_fragment*/
        <item>Cosmic Digital is an innovation driven company that designs and creates simulation solutions,</item>
        <item>which have applications in Entertainment, Education, Retail and Marketing domains.</item>
        <item>We customise products based on briefs provided by our clients to provide specific solutions in these industries.</item>
        <item>Apart from these, we also have a wide array of standard simulation products that are “Ready to Go”!</item>
        <item>Cosmic has designed a range of future-proof products to make Education- easy and fun,</item>
        <item>Entertainment- multi sensory, Retail- attractive and impactful and Marketing- ROI driven. </item>
        <item>Our portfolio includes 7D simulators, Interactive floors, Pyramid Holographic, Recording booths,</item>
        <item>360 Theatres, Digital Interactive Surfaces, Magical Mirrors, Interactive Dispensers, Immersive Tunnel and many more.</item>
    </string-array>
    <string name="TextView8">Ultimate Virtual Reality</string>
    <string-array name="TextView9">/*virtualreality_fragment*/
        <item>Do you have an audience waiting to experience effects that are virtual, yet real?</item>
        <item>Do they want to feel the tickle of water drops hitting against their feet with the simplest tools available?</item>
        <item>Do they wish to experience the feel of being caught right in the middle of a storm?</item>
        <item> Do they crave for an experience brought on by being blinded by lights and mist of smoke?</item>
        <item>Cosmic brings to you such wonderful and engaging solutions that leave a deep impact on your audience.</item>
        <item>Navigate your way for all the effects curated by us that are virtual yet real.</item>
    </string-array>
    <string name="TextView10">Water spray effect</string>
    <string name="TextView11">Blowing wind effect</string>
    <string name="TextView12">Fragrance effect</string>
    <string name="TextView13">Strobe lighting effect</string>
    <string name="TextView14">Smoke effect</string>
    <string name="TextView15">Magical Effects</string>
    <string name="TextView16">Special Effects</string>
    <string name="TextView17">Visual Effects</string>
    <string name="TextView18">Sensory Effects</string>
    <string name="TextView19">Interactive Floors</string>
    <string-array name="TextView20">/*Interactive_floors_fragment*/
        <item>Easily customizable and displaying high resolution graphics, Interactive Floors</item>
        <item>are the demand of the time, be it at events, conferences, fashion shows, product</item>
        <item>launches or any product marketing events. A boon for retail industry, they enhance the </item>
        <item>retail show window and aid in increasing the footfall of the clients.</item>
        <item></item>
        <item>Combining all the fun elements of dancing flames, shimmering water, floating fish, magical stars,</item>
        <item>blooming flowers and visual auras, Cosmic Digi offers creative design services to customize and </item>
        <item>optimize your retail and marketing campaign. Not only this, those places which are frequented by kids </item>
        <item>we can offer interactive floors with games. This has become a huge success in entertaining and engaging kids</item>
        <item>in an innovative way.</item>
        <item>        </item>
        <item>Our production team provides an array of interactive scenarios that can be used “as it is”</item>
        <item>or easily adapted with your corporate logo to get you custom–branded interactive display,</item>
        <item>up and running quickly.</item>
    </string-array>
    <string name="TextView21">Technical Specification</string>
    <string-array name="TextView22">/*techspec_fragment*/
        <item>Clap Sensing</item>
        <item></item>
        <item>Projector Scheduitemng</item>
        <item></item>
        <item>Remote Management</item>
        <item></item>
        <item>Multiple Display Technology Support</item>
        <item></item>
        <item>Multisensor Support</item>
        <item></item>
        <item>Projection Correction Software</item>
        <item></item>
        <item>Silhouette Tracking</item>
        <item></item>
        <item>Magix Code</item>
    </string-array>
    <string name="TextView23">Pyramid Holographic</string>
    <string-array name="TextView24">/*pyramid_fragment*/
        <item>Pyramid Holographic is the latest in projection systems. Users control dynamic</item>
        <item>multimedia interactive displays with simple gestures and body movement hence making it</item>
        <item>a full, body-engaging experience.</item>
        <item></item>
        <item>A science project experimented in education industry has taken the entertainment industry</item>
        <item>by storm, as it works on the 3D projection mirror principle in reality. Watch out for this </item>
        <item>product, rich in edutainment features to boost the retail and marketing of your products.</item>
        <item>With interactive pyramid you can experience the magical mixing of Virtual images with the</item>
        <item>real objects, nice to see, exciting for the audiences, fun for kids and captures attention of</item>
        <item>the audiences of all ages. It is capable of delivering products in stunning High Definition</item>
        <item>resolution, so that it matches the real environment perfectly and creates vivid, stunning visual</item>
        <item>effects. Hence place your promotional material right at the center of attention which, with its</item>
        <item>presence, will trigger retail and marketing exponentially, thereby increasing the number of</item>
        <item>clients/buyers who visit your store.</item>
    </string-array>
    <string name="TextView25">Working Principle</string>
    <string name="TextView26">Features</string>
    <string-array name="TextView27">/*techspec2_fragment*/
        <item>Holographic display 3D pyramid is based on three-dimension(3D) projection mirror principle.</item>
        <item>It can play 3D light and shadow imaging floated in the air under treatment of 3D imaging</item>
        <item>device. Viewers can walk a circle around the four-dimensional imaging system to watch the </item>
        <item>mirror image projection suspended in the air.</item>
    </string-array>
    <string-array name="TextView28">/*techspec2_fragment*/
        <item>Works on 3D projection mirror principle</item>
        <item>Easy to operate</item>
        <item>Easy to Set Up-Plug and Play</item>
        <item>Available in various sizes (19”/22”/32”/42”)</item>
        <item>Easily customizable</item>
        <item>Visually stunning product display</item>
        <item>Combines holographic 3D content with physical products</item>
        <item>Full HD resolution</item>
        <item>Displays 3D holographic animation with actual scenes</item>
    </string-array>
    <string name="TextView29">Components</string>
    <string name="TextView31">Extensively Used</string>
    <string-array name="TextView30">/*techspec3_fragment*/
        <item>The Appearance Cabinet</item>
        <item>LED Display</item>
        <item>3D Image Transmit Device</item>
        <item>Display Device</item>
    </string-array>
    <string-array name="TextView32">/*techspec3_fragment*/
        <item>Advertising and branding</item>
        <item>Events and promotions</item>
        <item>Exhibitions and trade shows</item>
        <item>Hotels, restaurants, corporate lobbies</item>
        <item>Gaming arenas, parties and clubs</item>

    </string-array>
    <string name="TextView33">G a l l e r y</string>
    <string name="TextView34">Recording Booth</string>
    <string-array name="TextView35">/*recording_fragment*/
        <item>Bring out the singing sensation in you and your guests with a truly</item>
        <item>enthralling professional recording studio experience and redefine entertainment.</item>
        <item>Built-in with world class multimedia and ambient noise reduction capabilities,</item>
        <item>excellent sound processors, headphones and microphones combine to create a perfect</item>
        <item>setting for recordings.  A fantastic tool for entertainment and marketing, this</item>
        <item>will enable you to record ones voice in complete privacy of the booth.</item>
        <item></item>
        <item>Equipped with touch screen capabilities and user-friendly menus for numerous</item>
        <item>functionalities, you get access to a library of popular karaoke song lists</item>
        <item>that you can record and burn into a high quality CD or you could simply go with</item>
        <item>lyrics that you have in your mind. Experience the luxury of state-of-the-art recording</item>
        <item>booth with smart audio/visual instructions that make it easier for you </item>
        <item>to enjoy your recording sessions.</item>
    </string-array>
    <string name="TextView36">7D Cinema and Simulator</string>
</resources>