<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anubh.cosmic.Effect">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#180246">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/blowing_wind_effect"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="59dp"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.18" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="87dp"
        android:layout_height="83dp"
        app:srcCompat="@drawable/fragrance_effect"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="98dp"
        android:layout_height="85dp"
        app:srcCompat="@drawable/strobe_lighting_effect_0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.029" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="127dp"
        android:layout_height="88dp"
        app:srcCompat="@drawable/smoke_effect"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="149dp"
        android:layout_height="108dp"
        app:srcCompat="@drawable/water_spray_effect_1"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView10"
        android:textColor="#FEFEEA"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/imageView9"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView11"
        android:textSize="20sp"
        android:textColor="#E2FFFB"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView12"
        android:textSize="20sp"
        android:textColor="#FCF2FF"
        app:layout_constraintRight_toLeftOf="@+id/imageView5"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView13"
        android:textSize="20sp"
        android:textColor="#DBFED9"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView14"
        android:textColor="#F1E4FF"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/imageView7"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintVertical_bias="0.511" />

</android.support.constraint.ConstraintLayout>

</FrameLayout>
