<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anubh.cosmic.techspec3">

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/blac_pp">

      <TextView
          android:id="@+id/textView21"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:textSize="25sp"
          android:layout_marginTop="8dp"
          android:text="@string/TextView21"
          android:textColor="#F7E6B2"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.016" />

      <TextView
          android:id="@+id/textView29"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/TextView29"
          android:textColor="#C5FAE9"
          android:textSize="20dp"
          android:layout_marginTop="8dp"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="8dp"
          android:layout_marginRight="8dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="8dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintHorizontal_bias="0.025"
          app:layout_constraintVertical_bias="0.11"
          app:layout_constraintTop_toBottomOf="@+id/textView21" />

      <TextView
          android:id="@+id/textView30"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:textColor="#F7D8EC"
          android:textSize="15sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintHorizontal_bias="0.132"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView29"
          app:layout_constraintVertical_bias="0.082" />

      <TextView
          android:id="@+id/textView31"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/TextView31"
          android:layout_marginTop="8dp"
          android:textSize="20sp"
          android:textColor="#DAFBDB"
          app:layout_constraintTop_toBottomOf="@+id/textView30"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="8dp"
          android:layout_marginRight="8dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="8dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintHorizontal_bias="0.025"
          app:layout_constraintVertical_bias="0.169" />

      <TextView
          android:id="@+id/textView32"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:textColor="#CBF6FF"
          android:textSize="15sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintHorizontal_bias="0.167"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView31"
          app:layout_constraintVertical_bias="0.184" />
  </android.support.constraint.ConstraintLayout>
</FrameLayout>
